# mcp-data-handles

./: README.md  Samples.md  main.py  openai_sdk.py  pyproject.toml
mcp_handles/: __main__.py  df_abstractions.py  main.py  pandas_generic.py
mcp_handles_client/: __init__.py  handles_db.sqlite  openai_sdk.py
mcp_handles_server/: __init__.py  config.py  df_abstractions.py
